--- a/index.html
+++ b/index.html
@@ -1,216 +1,129 @@
-/* Estilos básicos para o aplicativo de controle de treino. */
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Controle de Treino</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Controle de Treino</h1>
+      <p>
+        Use este aplicativo offline para registrar seus treinos, acompanhar a
+        progressão de carga e ver um resumo da evolução. Os dados são
+        armazenados localmente no seu dispositivo (localStorage), de modo
+        que você pode abrir o arquivo no Google Drive ou no seu celular sem
+        perder as informações.
+      </p>
+    </header>
 
-/* Reset simples */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+    <main>
+      <!-- Formulário de entrada de treino -->
+      <section class="card">
+        <h2>Adicionar novo treino</h2>
+        <form id="workout-form">
+          <div class="form-group">
+            <label for="date">Data</label>
+            <input type="date" id="date" required />
+          </div>
+          <div class="form-group">
+            <label for="start">Início</label>
+            <input type="time" id="start" required />
+          </div>
+          <div class="form-group">
+            <label for="end">Fim</label>
+            <input type="time" id="end" required />
+          </div>
+          <div class="form-group">
+            <label for="exercise">Exercício</label>
+            <input
+              type="text"
+              id="exercise"
+              list="exercise-list"
+              placeholder="Ex.: Supino reto"
+              required
+            />
+            <!-- Lista de sugestões de exercícios -->
+            <datalist id="exercise-list">
+              <option value="Agachamento"></option>
+              <option value="Supino reto"></option>
+              <option value="Levantamento terra"></option>
+              <option value="Remada curvada"></option>
+              <option value="Desenvolvimento militar"></option>
+              <option value="Rosca bíceps"></option>
+              <option value="Puxada alta"></option>
+              <option value="Tríceps testa"></option>
+            </datalist>
+          </div>
+          <div class="form-group">
+            <label for="sets">Séries</label>
+            <input type="number" id="sets" min="1" required />
+          </div>
+          <div class="form-group">
+            <label for="reps">Repetições</label>
+            <input type="number" id="reps" min="1" required />
+          </div>
+          <div class="form-group">
+            <label for="weight">Carga (kg)</label>
+            <input type="number" id="weight" min="0" step="0.5" required />
+          </div>
+          <div class="form-group">
+            <label for="rest">Descanso (s)</label>
+            <input type="number" id="rest" min="0" step="5" />
+          </div>
+          <div class="form-group">
+            <label for="rpe">RPE (1–10)</label>
+            <input type="number" id="rpe" min="1" max="10" />
+          </div>
+          <div class="form-group">
+            <label for="notes">Observações</label>
+            <textarea id="notes" rows="2" placeholder="Observações, sensações, etc."></textarea>
+          </div>
+          <div class="form-actions">
+            <button type="submit">Adicionar</button>
+            <button type="reset">Limpar</button>
+          </div>
+        </form>
+      </section>
 
-body {
-  background: #f4f4f6;
-  color: #333;
-  line-height: 1.4;
-  padding: 20px;
-}
+      <!-- Tabela de treinos salvos -->
+      <section class="card">
+        <h2>Entradas salvas</h2>
+        <div class="table-container">
+          <table id="entries-table">
+            <thead>
+              <tr>
+                <th>Data</th>
+                <th>Início</th>
+                <th>Fim</th>
+                <th>Exercício</th>
+                <th>Séries</th>
+                <th>Reps</th>
+                <th>Carga (kg)</th>
+                <th>Volume</th>
+                <th>Descanso (s)</th>
+                <th>Duração</th>
+                <th>RPE</th>
+                <th>Observações</th>
+              </tr>
+            </thead>
+            <tbody id="entries-body"></tbody>
+          </table>
+        </div>
+        <div class="table-actions">
+          <button id="download-btn">Baixar CSV</button>
+          <button id="clear-btn">Limpar dados</button>
+        </div>
+      </section>
 
-header {
-  text-align: center;
-  margin-bottom: 20px;
-}
+      <!-- Resumo de progressão e volume -->
+      <section class="card">
+        <h2>Resumo de Volume e Progressão</h2>
+        <div id="summary"></div>
+      </section>
+    </main>
 
-header h1 {
-  font-size: 1.8rem;
-  margin-bottom: 0.5rem;
-}
-
-header p {
-  font-size: 0.9rem;
-  color: #555;
-}
-
-main {
-  max-width: 960px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-/* Cartões com sombra */
-.card {
-  background: #fff;
-  padding: 15px;
-  border-radius: 6px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.card h2 {
-  margin-bottom: 10px;
-  font-size: 1.4rem;
-  color: #444;
-}
-
-/* Formulário */
-#workout-form {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.form-group {
-  flex: 1 1 140px;
-  display: flex;
-  flex-direction: column;
-}
-
-.form-group label {
-  margin-bottom: 4px;
-  font-size: 0.85rem;
-  font-weight: bold;
-}
-
-.form-group input,
-.form-group textarea {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 0.9rem;
-}
-
-.form-group textarea {
-  resize: vertical;
-}
-
-.form-actions {
-  flex-basis: 100%;
-  display: flex;
-  justify-content: flex-start;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-.form-actions button {
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  background-color: #007bff;
-  color: #fff;
-  font-size: 0.9rem;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.form-actions button[type="reset"] {
-  background-color: #6c757d;
-}
-
-.form-actions button:hover {
-  background-color: #0056b3;
-}
-
-.form-actions button[type="reset"]:hover {
-  background-color: #5a6268;
-}
-
-/* Tabela */
-.table-container {
-  overflow-x: auto;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 0.85rem;
-  margin-top: 10px;
-}
-
-thead {
-  background-color: #007bff;
-  color: #fff;
-}
-
-th,
-td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.table-actions {
-  margin-top: 10px;
-  display: flex;
-  gap: 10px;
-}
-
-.table-actions button {
-  padding: 6px 12px;
-  border: none;
-  border-radius: 4px;
-  background-color: #28a745;
-  color: #fff;
-  font-size: 0.8rem;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.table-actions button:hover {
-  background-color: #218838;
-}
-
-#clear-btn {
-  background-color: #dc3545;
-}
-
-#clear-btn:hover {
-  background-color: #c82333;
-}
-
-/* Resumo */
-#summary {
-  margin-top: 10px;
-  font-size: 0.85rem;
-}
-
-/* Tabelas de resumo */
-.summary-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 6px;
-  font-size: 0.8rem;
-}
-
-.summary-table th,
-.summary-table td {
-  border: 1px solid #ddd;
-  padding: 6px;
-  text-align: left;
-}
-
-.summary-table thead {
-  background-color: #343a40;
-  color: #fff;
-}
-.summary-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-@media (max-width: 600px) {
-  .form-group {
-    flex-basis: 100%;
-  }
-
-  .form-actions {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .table-actions {
-    flex-direction: column;
-  }
-}
+    <script src="script.js"></script>
+  </body>
+</html>
